--- a/source/TimeLapser/packages.config
+++ b/source/TimeLapser/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
+  <package id="Accord" version="3.4.0" targetFramework="net462" />
+  <package id="Accord.Video" version="3.4.0" targetFramework="net462" />
+  <package id="Accord.Video.FFMPEG" version="3.4.0" targetFramework="net462" />
+  <package id="SharpDX" version="3.1.1" targetFramework="net462" />
+  <package id="SharpDX.Direct3D11" version="3.1.1" targetFramework="net462" />
+  <package id="SharpDX.DXGI" version="3.1.1" targetFramework="net462" />
 </packages>
