--- a/source/TimeLapser/TimeLapser.csproj
+++ b/source/TimeLapser/TimeLapser.csproj
@@ -75,7 +75,7 @@
   <ItemGroup>
     <Compile Include="Recording\DisposableBase.cs" />
     <Compile Include="Recording\DX\DXExtensions.cs" />
-    <Compile Include="Recording\DX\DXRenderData.cs" />
+    <Compile Include="Recording\DX\DXSnapperInput.cs" />
     <Compile Include="Recording\DX\DXSnapper.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
