--- a/src/TimeLapser/kasthack.TimeLapser.csproj
+++ b/src/TimeLapser/kasthack.TimeLapser.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.Net.Sdk">
   <PropertyGroup>
+    <NeutralLanguage>en-us</NeutralLanguage>
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NoWarn>SA1300;SA1600;SA1591;CS1591;SA1633;SA1601</NoWarn>
+    <NoWarn>$(NoWarn);SA1300;SA1600;SA1591;CS1591;SA1633;SA1601;SA1623;</NoWarn>
     <!--<PublishSingleFile>true</PublishSingleFile>-->
 
     <PlatformTarget>x86</PlatformTarget>
