--- a/src/TimeLapser/kasthack.TimeLapser.csproj
+++ b/src/TimeLapser/kasthack.TimeLapser.csproj
@@ -31,7 +31,11 @@
     <PackageReference Include="Accord.Video.FFMPEG" Version="3.8.0" />
 
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.3" />
-    <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+    
+    <!--<PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />-->
+    <PackageReference Include="Vortice.DXGI" Version="2.4.2" />
+    <PackageReference Include="Vortice.Direct3D11" Version="2.4.2" />
+
 
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
